--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -112,17 +112,17 @@ aside {
         background-color: transparent;
         border-color: rgba(white, .3);
         .navbar-header .navbar-brand {
-            color: rgba(white, .7);
+            color: rgba($theme-dark, .7);
             &:hover,
             &:focus {
-                color: white;
+                color: $theme-dark;
             }
         }
         .nav > li > a,
         .nav > li > a:focus {
-            color: rgba(white, .7);
+            color: rgba($theme-dark, .7);
             &:hover {
-                color: white;
+                color: $theme-dark;
             }
         }
         &.affix {
@@ -175,7 +175,7 @@ header {
             }
             p {
                 font-weight: 300;
-                color: rgba(white, .7);
+                color: white;
                 font-size: 16px;
                 margin-bottom: 50px;
             }
